Changed file upload to allow rotation of incorrectly oriented images

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -15,9 +15,11 @@
         <div class="title">
             <img src="UFCFace.JPG" alt="UFC Face Logo">
             <h1 id="description">Which UFC Champion Are YOU!</h1>
-            <canvas id="boxes" width=700 height=400>
+            <canvas id="boxes" width=322 height=380>
                 <img src="PicBox.jpg" alt="PicBox1" id="PicBox1" class="emptyBox" width="322" height="380">
-                <img src="PicBox.jpg" alt="PicBox2" id="PicBox2" style="padding-left:50px" class="emptyBox" width="322" height="380">
+            </canvas>
+            <canvas id="boxes2" width="362" height="380">
+                <img src="PicBox.jpg" alt="PicBox2" id="PicBox2" class="emptyBox" width="322" height="380">
             </canvas>
             <div class="bottom">
                 <input type="file"  accept="image/jpeg" name="image" id="file" onchange="loadFile()" style="display: none;">
