--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+        <link rel="shortcut icon" type="image/x-icon" href="UFCFace.ico" />
         <title>UFC Face</title>
         <link href ="style.css" rel="stylesheet"/>
         <link href="https://fonts.googleapis.com/css?family=Anton&display=swap" rel="stylesheet">
