--- a/public_html/index.html
+++ b/public_html/index.html
@@ -6,8 +6,9 @@
         <link href="https://fonts.googleapis.com/css?family=Anton&display=swap" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.0.0/dist/tf.min.js"></script>
-        <script src="jquery.facedetection.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/exif-js"></script>
+        <script src="tracking-min.js"></script>
+        <script src="face-min.js"></script>
         <script src="UFCFace.js"></script>
         <meta name="description" content="Ever wonder which UFC champion you look like most? Well look no further than UFC Face!">
         <meta name="keywords" content="UFC, Face, Face Detection, MMA, CNN, UFCFace, UFC Face">
